--- a/index.css
+++ b/index.css
@@ -1,7 +1,14 @@
+    #outerContainer {
+      width: 600px;
+      background-color: white;
+      overflow: hidden;
+      border: solid;
+    }
+    
     #container {
       width: 100%;
       height: 800px;
-      background-color: #333;
+      background-color: rgb(240, 236, 236);
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -11,9 +18,9 @@
       touch-action: none;
     }
     #calendar {
-      width: 100%;
-      height: 400px;
-      background-color: rgb(56, 17, 231);
+      width: 480px;
+      height: 560px;
+      background-color: rgb(219, 210, 210);
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -21,17 +28,27 @@
       overflow: hidden;
       border-radius: 7px;
       touch-action: none;
+      border-color: white;
+      border-style: solid;
+      border-width: 6px;
+      padding-right: 80px;
     }
-    #stickers {
-      width: 100%;
-      height: 400px;
-      background-color: rgb(216, 210, 203);
+    #stickerContainer {
       display: flex;
-      align-items: center;
-      justify-content: center;
-      overflow: hidden;
+      width: 480px;
+      min-height: 100px;
+      background-color: white;
       border-radius: 7px;
-      touch-action: none;
+      margin-bottom: 10px;
+    }
+    #calendar .weeklyTheme {
+      width: 200px;
+      text-align: center;
+    }
+    #calendar .weeklyTheme textarea{
+      width: 200px;
+      text-align: center;
+      resize: none;
     }
     .item {
       width: 100px;
@@ -51,6 +68,86 @@
       pointer-events: none;
     }
 
+    .Monday .weekDayName {
+      background-image: linear-gradient(rgb(182, 109, 250), rgb(107, 13, 196));
+      color: white;
+      font-weight: bold;
+      font-family: cursive;
+      text-shadow: 1px 1px 8px #494848;
+      margin-bottom: -4px;
+    }
+
+    .Tuesday .weekDayName {
+      background-image: linear-gradient(rgb(209, 171, 245), blueviolet);
+      color: white;
+      font-weight: bold;
+      font-family: cursive;
+      text-shadow: 1px 1px 8px #494848;
+      margin-bottom: -4px;
+    }
+
+    .Wednesday .weekDayName {
+      background-image: linear-gradient(rgb(210, 153, 248), rgb(145, 60, 202));
+      color: white;
+      font-weight: bold;
+      font-family: cursive;
+      text-shadow: 1px 1px 8px #494848;
+      margin-bottom: -4px;
+    }
+
+    .Thursday .weekDayName {
+      background-image: linear-gradient(rgb(242, 150, 250), rgb(200, 77, 211));
+      color: white;
+      font-weight: bold;
+      font-family: cursive;
+      text-shadow: 1px 1px 8px #494848;
+      margin-bottom: -4px;
+    }
+
+    .Friday .weekDayName {
+      background-image: linear-gradient(rgb(237, 91, 250), rgb(180, 13, 196));
+      color: white;
+      font-weight: bold;
+      font-family: cursive;
+      text-shadow: 1px 1px 8px #494848;
+      margin-bottom: -4px;
+    }
+
+    .weekDay-Underline {
+      margin-left: 76px;
+      margin-bottom: 10px;
+      border-color: blueviolet;
+      border-style: solid;
+      border-width: 1px;
+      background-color: blueviolet;
+      border-radius: 1px;
+    }
+
+    .weekDayText {
+      display: flex;
+    }
+
+    .weekDayName {
+      width: 84px;
+      border-radius: 12px;
+      padding: 8px;
+      text-align: center;
+      background-color: aqua;
+    }
+
+    .weekDayDate {
+      padding: 8px;
+    }
+
+    #calendar textarea {
+      resize: vertical;
+      width: 360px;
+    }
+
+    #calendar hr {
+      margin-top: 0px;
+    }
+
     .outer {
   
         overflow-x: hidden;
@@ -59,6 +156,7 @@
       }
       
       .scrollcontainer {
+        width: 400px;
         height: 100px;
         display: flex;
         transition: transform .4s ease-in;
