--- a/index.css
+++ b/index.css
@@ -4,6 +4,25 @@
       overflow: hidden;
       border: solid;
     }
+
+    #rightColumn {
+      float: right;
+      margin-right: 50px;
+    }
+
+    #leftColumn {
+      float: left;
+    }
+
+    .uploadLabel {
+      color: white;
+      background-color: rgb(182, 109, 250);
+      border: solid;
+      border-radius: 4px;
+      border-color: black;
+      padding: 1px;
+      margin-right: 2px;
+    }
     
     #container {
       width: 100%;
@@ -28,9 +47,10 @@
       overflow: hidden;
       border-radius: 7px;
       touch-action: none;
-      border-color: white;
+      border-color: rgb(237, 91, 250);
       border-style: solid;
       border-width: 6px;
+      box-shadow: 3px 3px black;
     }
     #stickerContainer {
       display: flex;
