--- a/index.css
+++ b/index.css
@@ -230,3 +230,28 @@
           left: 580px;
          z-index:1;
       }
+
+/* Site navigation */
+.sitenavigation {
+  overflow: hidden;
+  background-color: black;
+  font-family: Arial;
+  display:block;
+}
+.sitenavigation a {
+  float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.sitenavigation a:hover, .dropdown:hover .dropbtn {
+  background-color: red;
+}
+
+div.navigation-menu-button {
+	float: right;
+}
+
